aws/ec2.tf
# ----- Public EC2 Instance ----- #
resource "aws_key_pair" "deployer" {
  # Trick to conditionally create a resource
  # NOTE: This resource is now a list with 0 or 1 items, so referencing it requires indexing
  count = local.has_public_subnets ? 1 : 0

  key_name   = "${var.project_name}-deployer-key"
  public_key = file(var.public_ssh_key_path)
  tags = {
    Name = "public-ec2-instance-public-key"
  }
}

# NOTE: When unspecified, default EBS storage is (as of 17/3/26) an 8GB gp3 SSD
resource "aws_instance" "public_instances" {
  for_each = local.public_azs

  ami           = data.aws_ami.ubuntu.id
  instance_type = var.ec2_instance_type
  subnet_id     = aws_subnet.public_subnets[each.key].id
  # Security groups are merged and cannot conflict with each other because they only support allow lists
  vpc_security_group_ids = [ # NOTE: Don't use `security_groups` if the EC2 instance is within a VPC
    aws_security_group.my_ip_inbound_ssh.id,
    aws_security_group.all_outbound_ipv4.id,
  ]
  key_name = aws_key_pair.deployer[0].key_name

  tags = {
    Name = "public-ec2-instance-${each.key}"
  }
}

# ----- Private EC2 Instance ----- #
resource "aws_instance" "private_instances" {
  for_each = local.private_ec2_azs

  ami           = data.aws_ami.ubuntu.id
  instance_type = var.ec2_instance_type
  subnet_id     = aws_subnet.private_subnets[each.key].id
  vpc_security_group_ids = [
    aws_security_group.outbound_ssm.id,
    aws_security_group.all_outbound_ipv4.id,
    aws_security_group.outbound_s3.id,
    aws_security_group.outbound_rds.id
  ]

  iam_instance_profile        = aws_iam_instance_profile.private_ec2_profile.name
  associate_public_ip_address = false

  tags = {
    Name = "private-ec2-instance-${each.key}"
  }
}


# ----- SSM EC2 Tunnel ----- #
resource "aws_instance" "bastion" {
  ami           = data.aws_ssm_parameter.amazon_linux_arm.value
  instance_type = var.bastion_instance_type
  subnet_id     = aws_subnet.ssm[local.main_az.name].id
  vpc_security_group_ids = [
    aws_security_group.outbound_ssm.id,
    aws_security_group.outbound_rds.id
  ]

  iam_instance_profile        = aws_iam_instance_profile.bastion_profile.name
  associate_public_ip_address = false

  tags = {
    Name = "bastion-instance-${local.main_az.name}"
  }
}
